crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__class__inherit_self.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/inherit_self.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `Foo`.
   ╭─[craftinginterpreters/test/class/inherit_self.lox:1:13]
   │
 1 │ class Foo < Foo {} // Error at 'Foo': A class can't inherit from itself.
   │             ───  
   │                   
───╯
