crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__class__local_reference_self.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/local_reference_self.lox
---
success: true
exit_code: 0
----- stdout -----
<class Foo at [POINTER]>

----- stderr -----
